tools/tests/errors/dict_remove_absent.ki
var d = {"a": 1}
d.remove("z")
